# projeto-impressoes

./: README.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
config/: settings.py  urls.py  views.py
impressoes/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
impressoes/migrations/: 0001_initial.py  0002_pedidodeimpressao_arquivopedido.py
impressoes/templates/impressoes/: detalhar_pedido_admin.html  detalhar_pedido_professor.html  editar_pedido.html  painel_admin.html  painel_professor.html
impressoes/templates/impressoes/includes/: header.html
uploads/impressao/: 1_Instagram.html
usuarios/: admin.py  forms.py  models.py  urls.py  views.py
usuarios/migrations/: 0001_initial.py  0002_usuario_cpf_usuario_endereco_usuario_telefone.py
